--- a/index.html
+++ b/index.html
@@ -35,15 +35,20 @@
 				<h2>à propos de moi</h2>
 			</div>
 			<div class="title_aside_text">
-				<p>Agé de 26 ans, enfant de la campagne alsacienne, Sebald est un créateur de contenus graphiques et narratifs qui s'est recentré sur les supports numériques interractifs et évolutifs, notamment
-					 dans la conception d'application web. Après une scolarité en Allemagne en tant que transfrontalier et un long cursus au sein des Beaux-Arts de Metz, cet individu s'est engagé à réaliser, sur le long terme, ses propres projets à but utilitaire et/ou artistique.
+				<p>Après des études scolaires en Allemagne, j’ai poursuivi mes études universitaires à l'École Supérieure d'Art de Lorraine
+					de Metz dans la section Communication. Je me suis concentré sur les médias numériques et leur installation. Après
+					avoir travaillé à Mirabelle TV, mon intérêt s'est porté sur le motion design et la programmation/automatisation.
+					Suite à mes études artistiques, j'ai entrepris une formation en développement web dans l'optique de rendre accessible
+					à tous de nouvelles expériences sociales et artistiques. Actuellement, je suis à la recherche d'un poste au sein d'une
+					agence de Communication ou d'un média dans le Grand Est. À terme, je souhaiterais devenir Directeur artistique/technique
+					et rejoindrer une équipe innovante et engagée dans le progrès socio-économique.
 				</p>
 			</div>
 		</aside>
 		<section id="formation">
 			<div class="title_section">
-				<svg version="1.1" id="hat" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-				viewBox="0 0 16.6 16.6" style="enable-background:new 0 0 16.6 16.6;" xml:space="preserve">
+				<svg id="hat" x="0px" y="0px"
+				viewBox="0 0 16.6 16.6" xml:space="preserve">
 					<g id="hat__background">
 						<polygon points="8.3,10.1 3.2,8.1 3.2,9.8 3.6,11.3 4.6,12.2 6.6,13 9.5,13 12.3,12 13.3,10.7 13.4,8 	"/>
 						<polygon points="0.7,5.1 8.3,1.8 16,5.1 8.3,8.3 	"/>
@@ -70,7 +75,7 @@
 			</div>
 			<div class="containerA">
 				<div class="date">
-					<svg version="1.1" class="double_point" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 5.3 5.3" style="enable-background:new 0 0 5.3 5.3;" xml:space="preserve">
+					<svg class="double_point" x="0px" y="0px" viewBox="0 0 5.3 5.3" xml:space="preserve">
 						<g class="double_point__element">
 							<path d="M2.7,1.7c-0.5,0-0.9,0.4-0.9,0.9c0,0.5,0.4,0.9,0.9,0.9s0.9-0.4,0.9-0.9C3.6,2.2,3.2,1.7,2.7,1.7z"/>
 							<path d="M2.7,0C1.2,0,0,1.2,0,2.7c0,1.5,1.2,2.7,2.7,2.7c1.5,0,2.7-1.2,2.7-2.7C5.3,1.2,4.1,0,2.7,0z M2.7,4.6
@@ -83,7 +88,7 @@
 					<p><span class="event--place">OpenClassroom</span><br /><span class="event--workplace">Développeur web junior</span><br />Frontend (et Backend)</p>
 				</div>
 				<div class="date">
-					<svg version="1.1" class="point" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 5.3 5.3" style="enable-background:new 0 0 5.3 5.3;" xml:space="preserve">
+					<svg class="point" x="0px" y="0px" viewBox="0 0 5.3 5.3" xml:space="preserve">
 						<circle cx="2.7" cy="2.7" r="1.7"/>
 					</svg>
 					<p>2018<br />Metz</p>
@@ -93,7 +98,7 @@
 							mention</span><br />École Supérieure d’Art de Lorraine</p>
 				</div>
 				<div class="date">
-					<svg version="1.1" class="point" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 5.3 5.3" style="enable-background:new 0 0 5.3 5.3;" xml:space="preserve">
+					<svg class="point" x="0px" y="0px" viewBox="0 0 5.3 5.3" xml:space="preserve">
 						<circle cx="2.7" cy="2.7" r="1.7"/>
 					</svg>
 					<p>2015 – 2019<br />Metz</p>
@@ -102,7 +107,7 @@
 					<p><span class="event--place">École Supérieure d’Art de Lorraine</span><br /><span class="event--workplace">Section communication</span><br />Niveau M1</p>
 				</div>
 				<div class="date">
-					<svg version="1.1" class="point" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 5.3 5.3" style="enable-background:new 0 0 5.3 5.3;" xml:space="preserve">
+					<svg class="point" x="0px" y="0px" viewBox="0 0 5.3 5.3" xml:space="preserve">
 						<circle cx="2.7" cy="2.7" r="1.7"/>
 					</svg>
 					<p>2014 – 2015<br />Besançon</p>
@@ -111,7 +116,7 @@
 					<p><span class="event--place">Lycée Saint Jean</span><br /><span class="event--workplace">Classe préparatoire, section Art et architecture</span></p>
 				</div>
 				<div class="date">
-					<svg version="1.1" class="point" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 5.3 5.3" style="enable-background:new 0 0 5.3 5.3;" xml:space="preserve">
+					<svg class="point" x="0px" y="0px" viewBox="0 0 5.3 5.3" xml:space="preserve">
 						<circle cx="2.7" cy="2.7" r="1.7"/>
 					</svg>
 					<p>2013 – 2014<br />Saarbrücken, Allemagne</p>
@@ -120,7 +125,7 @@
 					<p><span class="event--place">Abibac (Baccalauréat franco-allemand)</span><br /><span class="event--workplace">Section Scientifique MP (option art) avec mention</span><br />DFG Saarbrücken</p>
 				</div>
 				<div class="date">
-					<svg version="1.1" class="point" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 5.3 5.3" style="enable-background:new 0 0 5.3 5.3;" xml:space="preserve">
+					<svg class="point" x="0px" y="0px" viewBox="0 0 5.3 5.3" xml:space="preserve">
 						<circle cx="2.7" cy="2.7" r="1.7"/>
 					</svg>
 					<p>2010<br />Saarbrücken, Allemagne</p>
@@ -129,7 +134,7 @@
 					<p>Brevet des Collèges<br />DFG Saarbrücken</p>
 				</div>
 				<div class="date">
-					<svg version="1.1" class="point" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 5.3 5.3" style="enable-background:new 0 0 5.3 5.3;" xml:space="preserve">
+					<svg class="point" x="0px" y="0px" viewBox="0 0 5.3 5.3" xml:space="preserve">
 						<circle cx="2.7" cy="2.7" r="1.7"/>
 					</svg>
 					<p>2008 – 2014<br />Saarbrücken, Allemagne</p>
@@ -141,7 +146,7 @@
 		</section>
 		<section id="experiences">
 			<div class="title_section">
-				<svg version="1.1" id="suitcase" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 16.6 16.6" style="enable-background:new 0 0 16.6 16.6;" xml:space="preserve">
+				<svg id="suitcase" x="0px" y="0px" viewBox="0 0 16.6 16.6" xml:space="preserve">
 					<path id="suitcase__background" d="M14.3,13.7H2.4c-0.6,0-1-0.4-1-1V5.5c0-0.6,0.4-1,1-1h11.9
 					c0.6,0,1,0.4,1,1v7.2C15.3,13.3,14.8,13.7,14.3,13.7z"/>
 					<g id="suitcase__element">
@@ -157,7 +162,7 @@
 			</div>
 			<div class="containerA">
 				<div class="date">
-					<svg version="1.1" class="double_point" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 5.3 5.3" style="enable-background:new 0 0 5.3 5.3;" xml:space="preserve">
+					<svg class="double_point" x="0px" y="0px" viewBox="0 0 5.3 5.3" xml:space="preserve">
 						<g class="double_point__element">
 							<path d="M2.7,1.7c-0.5,0-0.9,0.4-0.9,0.9c0,0.5,0.4,0.9,0.9,0.9s0.9-0.4,0.9-0.9C3.6,2.2,3.2,1.7,2.7,1.7z"/>
 							<path d="M2.7,0C1.2,0,0,1.2,0,2.7c0,1.5,1.2,2.7,2.7,2.7c1.5,0,2.7-1.2,2.7-2.7C5.3,1.2,4.1,0,2.7,0z M2.7,4.6
@@ -170,7 +175,7 @@
 					<p><span class="event--place">Auchan, Saint Jacques</span><br /><span class="event--workplace">Employé polyvalent</span><br />Mise en rayon et permanence.</p>
 				</div>
 				<div class="date">
-					<svg version="1.1" class="point" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 5.3 5.3" style="enable-background:new 0 0 5.3 5.3;" xml:space="preserve">
+					<svg class="point" x="0px" y="0px" viewBox="0 0 5.3 5.3" xml:space="preserve">
 						<circle cx="2.7" cy="2.7" r="1.7"/>
 					</svg>
 					<p>04/2019 – 05/2019<br />Brumath</p>
@@ -180,7 +185,7 @@
 					</p>
 				</div>
 				<div class="date">
-					<svg version="1.1" class="point" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 5.3 5.3" style="enable-background:new 0 0 5.3 5.3;" xml:space="preserve">
+					<svg class="point" x="0px" y="0px" viewBox="0 0 5.3 5.3" xml:space="preserve">
 						<circle cx="2.7" cy="2.7" r="1.7"/>
 					</svg>
 					<p>02/2019<br />Metz</p>
@@ -190,7 +195,7 @@
 						classement des livres.</p>
 				</div>
 				<div class="date">
-					<svg version="1.1" class="point" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 5.3 5.3" style="enable-background:new 0 0 5.3 5.3;" xml:space="preserve">
+					<svg class="point" x="0px" y="0px" viewBox="0 0 5.3 5.3" xml:space="preserve">
 						<circle cx="2.7" cy="2.7" r="1.7"/>
 					</svg>
 					<p>06/2018 – 02/2019<br />Metz</p>
@@ -199,7 +204,7 @@
 					<p><span class="event--place">Burger King, Metz Technopole</span><br /><span class="event--workplace">Employé polyvalent</span><br />Caissier, cuisinier et technicien de surface.</p>
 				</div>
 				<div class="date">
-					<svg version="1.1" class="point" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 5.3 5.3" style="enable-background:new 0 0 5.3 5.3;" xml:space="preserve">
+					<svg class="point" x="0px" y="0px" viewBox="0 0 5.3 5.3" xml:space="preserve">
 						<circle cx="2.7" cy="2.7" r="1.7"/>
 					</svg>
 					<p>07/2017 – 09/2017<br />Woippy</p>
@@ -209,7 +214,7 @@
 						programmation des animations sur Adobe After Effects.</p>
 				</div>
 				<div class="date">
-					<svg version="1.1" class="point" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 5.3 5.3" style="enable-background:new 0 0 5.3 5.3;" xml:space="preserve">
+					<svg class="point" x="0px" y="0px" viewBox="0 0 5.3 5.3" xml:space="preserve">
 						<circle cx="2.7" cy="2.7" r="1.7"/>
 					</svg>
 					<p>07/2016 – 08/2016<br />06/2014 – 08/2014<br />07/2013 – 08/2013<br />07/2012 – 08/2012<br />Saarbrücken, Allemagne</p>
@@ -222,7 +227,7 @@
 						des livres pour l’année 2012/2013.</p>
 				</div>
 				<div class="date">
-					<svg version="1.1" class="point" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 5.3 5.3" style="enable-background:new 0 0 5.3 5.3;" xml:space="preserve">
+					<svg class="point" x="0px" y="0px" viewBox="0 0 5.3 5.3" xml:space="preserve">
 						<circle cx="2.7" cy="2.7" r="1.7"/>
 					</svg>
 					<p>07/2011 – 08/2011<br />Morhange</p>
@@ -232,7 +237,7 @@
 						assistance.</p>
 				</div>
 				<div class="date">
-					<svg version="1.1" class="point" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 5.3 5.3" style="enable-background:new 0 0 5.3 5.3;" xml:space="preserve">
+					<svg class="point" x="0px" y="0px" viewBox="0 0 5.3 5.3" xml:space="preserve">
 						<circle cx="2.7" cy="2.7" r="1.7"/>
 					</svg>
 					<p>05/2010<br />Uhingen, Allemagne</p>
@@ -244,7 +249,7 @@
 		</section>
 		<section id="recommandations">
 			<div class="title_section">
-				<svg version="1.1" id="pen" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 16.6 16.6" style="enable-background:new 0 0 16.6 16.6;" xml:space="preserve">
+				<svg id="pen" x="0px" y="0px" viewBox="0 0 16.6 16.6" xml:space="preserve">
 					<polygon id="pen__background" points="1.2,15.7 2.3,11.9 5.8,8.3 11.6,2.8 13.1,2 14.5,2.5 15.4,3.7 
 					15.2,5 13.4,6.9 9,11.3 5.4,15 4.4,15.4 1.2,16.1 "/>
 					<path id="pen__element" d="M13.2,1.6c-0.6,0-1.1,0.2-1.5,0.5l0,0l-0.1,0.1l-0.1,0.1l0,0l0,0l-9.6,9.5
@@ -267,7 +272,7 @@
 				<h2>Loisirs</h2>
 			</div>
 			<div class="title_aside_text" id="hobbies_icons">
-				<svg version="1.1" id="hobbies__swimming" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 24.8 24.8" style="enable-background:new 0 0 24.8 24.8;" xml:space="preserve">
+				<svg id="hobbies__swimming" x="0px" y="0px" viewBox="0 0 24.8 24.8" xml:space="preserve">
 					<polygon id="hobbies__swimming__background" points="4.7,17.3 7.6,15.4 12.1,14.8 13.2,14.8 
 						12.4,12.7 10.1,10.3 8.9,9.4 10.1,9.4 13.2,10.7 15.7,13.9 16,14.1 17.2,12.8 18.9,12.7 20.4,14 20.4,15.8 19.7,16.6 17.1,17.1 
 						16,17.7 14,17.7 12.5,17.1 11.4,16.9 9.5,16.7 7.8,17.1 6.2,17.7 4.6,17.7 "/>
@@ -291,8 +296,7 @@
 						c0-3.2,1.3-6.1,3.4-8.2c2.1-2.1,5-3.4,8.2-3.4c3.2,0,6.1,1.3,8.2,3.4c2.1,2.1,3.4,5,3.4,8.2c0,1.7-0.4,3.4-1.1,4.8
 						C22.7,17,21.8,16.5,20.3,16.4z"/>
 				</svg>
-				<svg version="1.1" id="hobbies__basketball" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 24.8 24.8"
-					style="enable-background:new 0 0 24.8 24.8;" xml:space="preserve">
+				<svg id="hobbies__basketball" x="0px" y="0px" viewBox="0 0 24.8 24.8" xml:space="preserve">
 					<path id="hobbies__basketball__basket" d="M12.4,0C5.6,0,0,5.5,0,12.4c0,5.4,3.4,9.9,8.2,11.6
 						c0.3,0.1,0.5,0.2,0.8,0.3c0.4,0.1,0.9,0.2,1.3,0.3c0.1,0,0.3,0,0.4,0.1c0.3,0,0.6,0.1,0.9,0.1c0.2,0,0.3,0,0.5,0c0.1,0,0.2,0,0.3,0
 						c0.1,0,0.2,0,0.3,0c0.2,0,0.3,0,0.5,0c0.3,0,0.6,0,0.9-0.1c0.1,0,0.3,0,0.4-0.1c0.5-0.1,0.9-0.2,1.3-0.3c0.3-0.1,0.5-0.2,0.8-0.3
@@ -332,7 +336,7 @@
 							C13.3,6.4,13.8,6.7,14.2,7.1z"/>
 					</g>
 				</svg>
-				<svg version="1.1" id="hobbies__reading" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 24.8 24.8" style="enable-background:new 0 0 24.8 24.8;" xml:space="preserve">
+				<svg id="hobbies__reading" x="0px" y="0px" viewBox="0 0 24.8 24.8" xml:space="preserve">
 					<path id="hobbies__reading__background" d="M12.4,0.8C18.8,0.8,24,6,24,12.4S18.8,24,12.4,24S0.8,18.8,0.8,12.4
 						S6,0.8,12.4,0.8 M12.4,0C5.6,0,0,5.6,0,12.4c0,6.8,5.6,12.4,12.4,12.4c6.8,0,12.4-5.5,12.4-12.4C24.8,5.6,19.2,0,12.4,0z"/>
 					<g id="hobbies__reading__last">
@@ -380,7 +384,7 @@
 				<p id="contact__mail">E-Mail:<br />
 					<a href="mailto:pauer.sebald@gmail.com" class="contact__mail--link">pauer.sebald@gmail.com</a></p>
 				<p id="contact__website">Site web:<br />
-				<a href="http://sebaldpauer.com/" target="_blank" class="contact__website--link">sebaldpauer.com</a></p>
+				<a href="#" target="_blank" class="contact__website--link">sebaldpauer.com</a></p>
 				<p id="contact__skype">Skype:<br />live:pauer.sebald</p>
 			</div>
 		</footer>
