--- a/index.html
+++ b/index.html
@@ -377,8 +377,8 @@
 				<h2>Contact</h2>
 			</div>
 			<div class="title_aside_text">
-				<p id="contact__adress">Adresse:<br />
-				<a href="https://www.google.com/maps/place/15+Rue+du+Pont+Saint-Marcel,+57000+Metz/data=!4m2!3m1!1s0x4794deaa2ce6dbb3:0xc3a395a631b7eec7?sa=X&ved=2ahUKEwjQjZ7H2NTqAhXBA2MBHa9fBZMQ8gEwAHoECAwQAQ" target="_blank" class="contact__adress--link">Metz, France</a></p>
+				<p id="contact__address">Adresse:<br />
+				<a href="https://www.google.com/maps/place/15+Rue+du+Pont+Saint-Marcel,+57000+Metz/data=!4m2!3m1!1s0x4794deaa2ce6dbb3:0xc3a395a631b7eec7?sa=X&ved=2ahUKEwjQjZ7H2NTqAhXBA2MBHa9fBZMQ8gEwAHoECAwQAQ" target="_blank" class="contact__address--link">Metz, France</a></p>
 				<p>Téléphone:<br />
 				+33 (0)7.82.78.20.18</p>
 				<p id="contact__mail">E-Mail:<br />
@@ -390,7 +390,7 @@
 		</footer>
 	</div>
 	<div id="fullscreen-video-bg">
-		<video src="video/Binary_numbers_alpha_overlay_01_Videvo.webm" preload="auto" autoplay loop>Cette animation ne démarre malheureusement pas. Excusez moi pour cette maladresse.</video>
+		<video src="video/Binary_numbers_alpha_overlay_01_Videvo.webm" preload="auto" autoplay loop>Cette animation ne démarre malheureusement pas. Excusez-moi pour cette maladresse.</video>
 	</div>
 	<div id="fullscreen-video-bg--overlay"></div>
 </body>
